style.css
/* RESET */
html {
  box-sizing: border-box;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

*, *:before, *:after {
  box-sizing: inherit;
}

body, h1, h2, h3, h4, h5, h6, p, ol, ul {
  margin: 0;
  padding: 0;
  font-weight: normal;
}

ol, ul {
  list-style: none;
}

img {
  max-width: 100%;
  height: auto;
}

/* STYLES */
body {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  background: #FFFFFF;
}
.container {
  width: 100%;
  max-width: 320px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 16px;
  background: #FFFFFF;
  /* border: 1px solid #EAEAEA;
  border-radius: 16px; */
  }

h1 {  
  font-style: normal;
  font-weight: 700;
  font-size: 13px;
  line-height: 1;
  color: #000000;
}

.link-list {
  margin-bottom: 24px;
  width: 100%;
}

ul {
  display: flex;
  flex-direction: column;
  gap:0;
  list-style: none;
  width: 100%;
}

/* li {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
} */

li a {
  width: 100%;
  transition: color 100ms ease-in-out, background 100ms ease-in-out;
  
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  
  display: block;
  flex-direction: row;
  align-items: center;
  padding: 12px;
  gap: 8px;
  border-radius: 4px;
  font-style: normal;
  font-weight: 400;
  font-size: 13px;
  line-height: 1;
  letter-spacing: -0.01em;
  color: #333333;
  text-decoration: none;
}

li a:hover {
  background: #000;
  color: #fff;
}

